C/sofa.h



/* VectorMatrix/BuildRotations */
void iauRx(double phi, double r[3][3]);

void iauRy(double theta, double r[3][3]);

void iauRz(double psi, double r[3][3]);

void iauPv2p(double pv[2][3], double p[3]);


/* VectorMatrix/MatrixOps */
void iauRxr(double a[3][3], double b[3][3], double atb[3][3]);


/* VectorMatrix/MatrixVectorProducts */
void iauRxp(double r[3][3], double p[3], double rp[3]);

void iauRxpv(double r[3][3], double pv[2][3], double rpv[2][3]);


/* VectorMatrix/RotationVectors */
void iauRm2v(double r[3][3], double w[3]);

void iauRv2m(double w[3], double r[3][3]);

void iauPv2s(double pv[2][3],
             double *theta, double *phi, double *r,
             double *td, double *pd, double *rd);

void iauPpsp(double a[3], double s, double b[3], double apsb[3]);

void iauPvdpv(double a[2][3], double b[2][3], double adb[2]);

void iauPvm(double pv[2][3], double *r, double *s);

void iauPvmpv(double a[2][3], double b[2][3], double amb[2][3]);

void iauPvppv(double a[2][3], double b[2][3], double apb[2][3]);

void iauPvu(double dt, double pv[2][3], double upv[2][3]);

void iauPvup(double dt, double pv[2][3], double p[3]);

void iauPvxpv(double a[2][3], double b[2][3], double axb[2][3]);

void iauPxp(double a[3], double b[3], double axb[3]);